apps/pdf/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pdf
  namespace: default
spec:
  selector:
    app: pdf
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
