apps/pdf/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pdf
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pdf.joejad.com`)
      kind: Rule
      services:
        - name: pdf
          port: 8080
      middlewares:
        - name: default-headers
  tls:
    secretName: local-joejad-tls
